# oilgas-nanobot-swarm

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  vercel.json
.devcontainer/: devcontainer.json
api/: index.py  requirements.txt
docs/: AGENTS.md  AGENT_TEAMS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  ENGINEERING_TOOLS.md  NELLIE_INTEGRATION.md
nanobot/: __init__.py
nanobot/api/: gateway.py  knowledge_routes.py
nanobot/core/: agent.py  agent_claude.py  agent_v2.py  agent_v3.py  claude_runner.py  hierarchical_swarm.py  l1_agent.py  orchestrator.py  roles.py  sub_prompts.py  sub_swarm.py
nanobot/integrations/: __init__.py  microsoft_graph.py  msgraph_ingestion.py  nellie_memory_bridge.py  openclaw_connector.py
nanobot/knowledge/: __init__.py  artifact_writer.py  entity_extractor.py  file_watcher.py  graph_builder.py  seed_vault.py  vault.py  vector_store.py
nanobot/scheduler/: __init__.py  agent_teams.py  scheduler.py
nanobot/state/: connection.py  memory_store.py  swarm_state.py  task_journal.py
nanobot/static/: docs-page.html  faq.html  index.html
nanobot/teams/: oilgas_teams.py
nanobot/tools/: anthropic_router.py  base.py  code_runner.py  file_io.py  http_fetch.py  knowledge_tools.py  msgraph_tools.py  oilgas_tools.py  router.py  vault_memory_tools.py  web_search.py
scripts/: launch_gateway.sh  launch_redis.sh  launch_vllm.sh  ms_graph_auth.py  ms_graph_e2e_test.py  setup_env.sh  start_all.sh
tests/: test_imports.py
