[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-swarm"
version = "1.0.0"
description = "NeuralQuantum Hierarchical Nanobot Swarm System"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.0",
    "redis[hiredis]>=5.0",
    "structlog>=24.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["nanobot*"]
