[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oilgas-nanobot-swarm"
version = "2.0.0"
description = "Hierarchical AI Agent Swarm for Oil & Gas Engineering — powered by VibeCaaS.com / NeuralQuantum.ai LLC"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["oil-gas", "engineering", "ai-agents", "swarm", "llm", "petroleum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.0",
    "redis[hiredis]>=5.0",
    "structlog>=24.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "msgpack>=1.0",
    "watchdog>=4.0",
    "msal>=1.28.0",
    "aiofiles>=23.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["nanobot*"]
